@@ -1,7 +1,7 @@
 buildscript {
     repositories {
-        
-        maven { url "http://repo.dotcms.com/artifactory/libs-release" }
+
+        maven { url "https://repo.dotcms.com/artifactory/libs-release" }
         jcenter()
     }
     dependencies {
@@ -18,7 +18,7 @@ plugins {
 }
 
 project.ext {
-    aspectjVersion = '1.8.10'
+    aspectjVersion = '1.9.2'
 }
 
 
@@ -39,7 +39,9 @@ node {
     }
 
 }
+
 import com.dotcms.repackage.org.apache.commons.io.FileUtils;
+import groovy.json.JsonSlurper
 
 configurations {
     compile
@@ -75,16 +77,26 @@ apply plugin: 'org.unbroken-dome.test-sets'
 apply plugin: 'project-report' /*For gradle dependencies: ./gradlew htmlDependencyReport*/
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+
+targetCompatibility = 1.8
+sourceCompatibility = 1.8
+
+// Compile Java.
+compileJava {
+    options.incremental = true
+    options.compilerArgs.addAll(['--release', '8'])
+}
+
 eclipse {
     project {
-        name = 'dotcms_5'
+        name = 'dotCMS'
     }
 }
 
 // In this section you declare where to find the dependencies of your project.
 repositories {
-    maven { url "http://repo.dotcms.com/artifactory/libs-release" }
-    maven { url "http://repo.dotcms.com/artifactory/libs-snapshot-local" }
+    maven { url "https://repo.dotcms.com/artifactory/libs-release" }
+    maven { url "https://repo.dotcms.com/artifactory/libs-snapshot-local" }
     maven { url 'https://jitpack.io' }
 }
 
@@ -153,24 +165,27 @@ dependencies {
     felix (group: 'org.osgi', name: 'org.osgi.compendium', version: '4.3.1') {
         transitive = false
     }
-    felix(group: 'org.apache.tika', name: 'tika-core', version: '1.17') {
+    felix(group: 'org.apache.tika', name: 'tika-core', version: '1.19') {
         transitive = false
     }
-    felix(group: 'org.apache.tika', name: 'tika-bundle', version: '1.17') {
+    felix(group: 'org.apache.tika', name: 'tika-bundle', version: '1.19') {
         transitive = false
     }
+
     felix group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     felix group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
     felix group: 'com.dotcms.tika', name: 'com.dotcms.tika', version: '0.2'
 
+    felix group: 'com.dotcms.samlbundle', name: 'com.dotcms.samlbundle', version: '21.03.1'
+    felix group: 'com.dotcms.samlbundle.fragment', name: 'com.dotcms.samlbundle.fragment', version: '21.03.1'
     /**** And now the libs we pull in from internal company sources - libs stored in ./plugins, ./bin, ./libs, the starter site, etc. ****/
     compile fileTree("src/main/plugins/com.dotcms.config/build/jar").include('plugin-com.dotcms.config.jar')
 
-    starter group: 'com.dotcms', name: 'starter', version: 'empty_20200512', ext: 'zip'
+    starter group: 'com.dotcms', name: 'starter', version: 'empty_20210405', ext: 'zip'
     //Uncomment this line if you want to download the starter that comes with data
-    //starter group: 'com.dotcms', name: 'starter', version: '20200512', ext: 'zip'
-    testsStarter group: 'com.dotcms', name: 'starter', version: 'empty_20200512', ext: 'zip'
-    
+    // starter group: 'com.dotcms', name: 'starter', version: '20210312', ext: 'zip'
+    testsStarter group: 'com.dotcms', name: 'starter', version: 'empty_20210405', ext: 'zip'
+
     profiler group: 'glowroot-custom', name: 'glowroot-agent', version: '0.13.1'
     profilerDependencies group: 'glowroot-custom', name: 'collector-https-linux', version: '0.13.1'
     profilerDependencies group: 'glowroot-custom', name: 'collector-https-osx', version: '0.13.1'
@@ -202,7 +217,6 @@ if (enterpriseSrcFolder.exists()){
     	}
 	}
 }
-
 
 ant.lifecycleLogLevel = "INFO"
 
@@ -273,13 +287,6 @@ if (project.hasProperty('jarBaseName')) {
 def tomcatDistBase = "$distLocation/$tomcatDistInstallLocation-$tomcatInstallVersion"
 def dotcmsDistBase = "../$tomcatDistInstallLocation-$tomcatInstallVersion"
 
-// Compile Java.
-compileJava {
-    targetCompatibility = 1.8
-    sourceCompatibility = 1.8
-    options.incremental = true
-}
-
 jar{
     exclude 'com/dotcms/enterprise/**'
 
@@ -302,7 +309,7 @@ processResources {
 
 // By default the war task compiles everything under src/main/java into WEB-INF/classes/
 // but, instead, we want to compile everything on a .jar file and put it under WEB-INF/lib.
-war.dependsOn 'deployPlugins','initNpm'
+war.dependsOn 'deployPlugins', 'extractDotCmsArtifacts'
 
 war {
 
@@ -405,6 +412,10 @@ integrationTest {
                     systemProperty "databaseType", "$databaseType"
                 }
             }
+
+    if(JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
+    }
 }
 integrationTest.group='dotCMS tests'
 
@@ -438,13 +449,13 @@ task prepareFelixForTests {
 prepareFelixForTests.group='dotCMS tests'
 prepareFelixForTests.description='Copies the felix bundle jars and the osgi-extra-generated.conf file to the specified felix home location'
 
-// Delete ROOT under tomcat8/webapps
+// Delete ROOT under tomcat9/webapps
 task undeployWarTomcat(type: Delete) {
     delete tomcatInstallLocation + webAppRootFolder
     followSymlinks = true
 }
 undeployWarTomcat.group='dotCMS Util'
-undeployWarTomcat.description='Removes /tomcat8/webapps folder. (reset tomcat)'
+undeployWarTomcat.description='Removes /tomcat9/webapps folder. (reset tomcat)'
 
 undeployWarTomcat.mustRunAfter 'backupWarTomcatData'
 
@@ -499,7 +510,7 @@ task clonePullTomcat(type: ClonePullTomcatTask) {
 
 }
 clonePullTomcat.group='dotCMS Util'
-clonePullTomcat.description='Clones or pull /tomcat8 folder.'
+clonePullTomcat.description='Clones or pull /tomcat9 folder.'
 
 //Executes clonePullTomcat task from dist version
 task clonePullTomcatDist(type: ClonePullTomcatTask) {
@@ -615,8 +626,8 @@ javadoc {
      */
     options.addStringOption('subpackages', 'com.dotmarketing:com.dotcms')
 
-    title       = "dotCMS API"
-    maxMemory   = "1024m"
+    title = "dotCMS API"
+    maxMemory = "1024m"
     failOnError = false
     options.noQualifiers 'all'
     options.author(true)
@@ -643,6 +654,7 @@ customDistWar.description='Builds a dotCMS as a war. (Task mean to be use from a
 
 compileAspect.dependsOn 'immutables'
 compileAspect {
+    additionalAjcArgs = ['showWeaveInfo' : 'false']
     println "\nCompiling Aspect..."
 }
 // This task defines if the immutables folder is generated, otherwise will generate it.
@@ -693,7 +705,11 @@ task buildPlugins(dependsOn: 'jar') {
             from "$buildDir/libs/"
         }
 
-        def pluginsFolder = new File("src/main/plugins");
+        println project.buildDir
+        println project.buildDir
+
+//        def pluginsFolder = new File("src/main/plugins");
+        def pluginsFolder = file('src/main/plugins')
 
         if (!pluginsFolder.exists()) {
             pluginsFolder = new File("../plugins");
@@ -940,13 +956,15 @@ class ClonePullTomcatTask extends DefaultTask{
 
     @TaskAction
     def pull(){
-        def folder = new File( tomcatLocation )
+        def folder = project.file( tomcatLocation )
+
+        println folder
         if( !folder.exists() ) {
 
             try {
 
                 println "Cloning the $project.tomcatInstallRepo, branch $project.tomcatInstallBranch on $tomcatLocation";
-                org.ajoberstar.grgit.Grgit.clone(dir: "$tomcatLocation", uri: "$project.tomcatInstallRepo", refToCheckout: "$project.tomcatInstallBranch")
+                org.ajoberstar.grgit.Grgit.clone(dir: folder.absolutePath, uri: "$project.tomcatInstallRepo", refToCheckout: "$project.tomcatInstallBranch")
             } catch (Exception exception) {
                 //Do nothing, this will fail only if git is not installed on this machine
             }
@@ -996,61 +1014,94 @@ class DeployWarTomcatTask extends DefaultTask{
             from '../libs/buildlibs'
             into buildLibLocation + '/lib'
             include 'mail.jar'
+            include 'javax.activation-1.2.0.jar'
         }
 
     }
 }
 
-task initNpm(type: NpmTask) {
-    args = ['init', '--yes']
+class NpmArtifactExtractTask extends DefaultTask {
+    String url = 'https://registry.npmjs.org'
+    String artifactFolder = './tmp'
+    String artifact
+    String version
+    String dest
 
-    finalizedBy 'installDotcmsUI', 'installDotcmsWebComponents'
-}
+    @TaskAction
+    def extract() {
+        project.mkdir(artifactFolder)
+        String artifactUrl = "$url/$artifact"
+        String artifactVersion = version == 'latest'
+                ? new JsonSlurper().parse(new URL(artifactUrl))."dist-tags".latest
+                : version
+        String versionUrl = "$artifactUrl/-/$artifact-${artifactVersion}.tgz"
+        println "Downloading from $versionUrl"
+        String downloadArtifact = "$artifactFolder/${artifact}.tgz"
+        def downloadFile = new File(downloadArtifact)
+        new URL(versionUrl).withInputStream { i -> downloadFile.withOutputStream { it << i } }
 
-task installDotcmsUI(type: NpmTask) {
-    if ("latest".equals(coreWebReleaseVersion)) {
-        args = ['install', 'dotcms-ui']
-    }else{
-        args = ['install', 'dotcms-ui@' + coreWebReleaseVersion]
+        project.copy {
+            from project.tarTree(project.file(downloadArtifact))
+            into dest
+        }
     }
-
-    finalizedBy 'copyDotcmsUI'
 }
 
-task installDotcmsWebComponents(type: NpmTask) {
-    if ("latest".equals(webComponentsReleaseVersion)) {
-        args = ['install', 'dotcms-webcomponents']
-    } else {
-        args = ['install', 'dotcms-webcomponents@' + webComponentsReleaseVersion]
-    }
-    finalizedBy 'copyDotCMSWebComponents'
-}
-
-task makeDotAdminFolder(type: DefaultTask) {
-    String dotAdminFolder = "./src/main/webapp/$angularFolder"
-    project.mkdir(dotAdminFolder)
-}
-
-task cleanNodeModules(type: Delete) {
-    delete './package.json'
-    delete './package-lock.json'
-    delete "./node_modules"
-    followSymlinks = true
-}
-
-task copyDotcmsUI(type: Copy) {
-    dependsOn 'makeDotAdminFolder'
-
+task cleanDotCmsUi {
+    delete './tmp/dotcms-ui.tgz'
     delete "./src/main/webapp/$angularFolder"
-    from (file("./node_modules/dotcms-ui"))
-    into("./src/main/webapp/$angularFolder")
 }
 
-task copyDotCMSWebComponents(type: Copy) {
-    from "./node_modules/dotcms-webcomponents/dist/"
+task cleanDotCmsWebComponents {
+    delete './tmp/dotcms-webcomponents.tgz'
+    delete './src/main/webapp/dotcms-webcomponents/package'
+    delete './src/main/webapp/dotcms-webcomponents/dotcms-webcomponents.js'
+    delete './src/main/webapp/dotcms-webcomponents/dotcms-webcomponents.esm.js'
+}
+
+task copyDotCmsUi(type: Copy) {
+    from(file("./src/main/webapp/$angularFolder/package"))
+    into("./src/main/webapp/$angularFolder")
+    finalizedBy 'deleteDotCmsUi'
+}
+
+task copyDotCmsWebComponents(type: Copy) {
+    from "./src/main/webapp/dotcms-webcomponents/package/dist/"
     into "./src/main/webapp/"
     include 'dotcms-webcomponents/*'
-    finalizedBy 'cleanNodeModules'
+}
+
+task deleteDotCmsUi(type: Delete) {
+    delete "./src/main/webapp/$angularFolder/package"
+}
+
+task extractDotCmsUi(type: NpmArtifactExtractTask) {
+    artifact = 'dotcms-ui'
+    version = coreWebReleaseVersion
+    dest = "./src/main/webapp/$angularFolder"
+    dependsOn 'cleanDotCmsUi'
+    finalizedBy 'copyDotCmsUi'
+}
+extractDotCmsUi.group = 'extract dotcms-ui'
+extractDotCmsUi.description = 'Extracts package from dotcms-ui artifact to dotAdmin'
+
+task extractDotCmsWebComponents(type: NpmArtifactExtractTask) {
+    artifact = 'dotcms-webcomponents'
+    version = webComponentsReleaseVersion
+    dest = './src/main/webapp/dotcms-webcomponents'
+    dependsOn 'cleanDotCmsWebComponents'
+    finalizedBy 'copyDotCmsWebComponents'
+}
+extractDotCmsWebComponents.group = 'extract dotcms-webcomponents'
+extractDotCmsWebComponents.description = 'Extracts package from dotcms-webcomponents to dotcms-webcomponents'
+
+task cleanTmp(type: Delete) {
+    delete './tmp'
+}
+
+task extractDotCmsArtifacts {
+    dependsOn 'extractDotCmsUi', 'extractDotCmsWebComponents'
+    finalizedBy 'cleanTmp'
 }
 
 task downloadDependencies(type: Exec) {
@@ -1077,8 +1128,6 @@ task downloadDependencies(type: Exec) {
     commandLine 'echo', 'Downloaded all dependencies'
 }
 
-
-
 // reference:  https://github.com/palantir/gradle-docker
 docker {
     name "dotcms/dotcms:base-$dotcmsReleaseVersion-$dotcmsReleaseBuild"
@@ -1096,10 +1145,7 @@ task upgradeTask << {
 
     javaexec {
         main = "com.dotcms.upgrade.Upgrade"
-        classpath = files("../libs/plugins/plugin-com.dotcms.upgradetask.jar") + files(sourceSets.main.output.classesDir) +  files(sourceSets.main.output.resourcesDir) + files(configurations.compile.files)
+        classpath = files("../libs/plugins/plugin-com.dotcms.upgradetask.jar") + files(sourceSets.main.output.classesDir) + files(sourceSets.main.output.resourcesDir) + files(configurations.compile.files)
         args("$task")
     }
 }
-
-
-
